<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:id="@+id/credential_content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ProgressBar
                android:id="@+id/ada_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-7dp"
                android:indeterminate="true"
                android:visibility="invisible"/>

        <ProgressBar
                android:id="@+id/credential_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-7dp"
                android:indeterminate="true"
                android:visibility="invisible"/>

        <ScrollView
                android:id="@+id/credential_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_padding"
                android:paddingRight="@dimen/activity_horizontal_padding">

            <LinearLayout
                    android:id="@+id/credential_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:id="@+id/main_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/main_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/widget_vertical_margin"
                            android:layout_marginLeft="@dimen/widget_horizontal_margin"
                            android:layout_marginRight="@dimen/widget_horizontal_margin"
                            android:layout_marginTop="@dimen/widget_vertical_margin"
                            android:text="@string/main_title"
                            android:textSize="@dimen/title_text"
                            android:textAlignment="center"
                            android:textStyle="bold"/>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <AutoCompleteTextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/main_prompt_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>


                    <CheckBox
                            android:id="@+id/temporary_email"
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:text="@string/main_prompt_temporary_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:id="@+id/temporary_email_hint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="@dimen/widget_vertical_margin"
                            android:layout_marginLeft="@dimen/widget_horizontal_margin"
                            android:layout_marginRight="@dimen/widget_horizontal_margin"
                            android:layout_marginTop="@dimen/widget_vertical_margin"
                            android:text="@string/main_hint_temporary_email"/>

                    <Button
                            android:id="@+id/photo_idcard_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/main_photo_idcard_button"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/photo_idcard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="4dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="@dimen/widget_horizontal_margin"
                            android:layout_marginRight="@dimen/widget_horizontal_margin"
                            app:srcCompat="@drawable/placeholder"
                            android:textStyle="bold"/>

                    <Button
                            android:id="@+id/photo_adcard_1_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/main_photo_adcard_1_button"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/photo_adcard_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="4dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="@dimen/widget_horizontal_margin"
                            android:layout_marginRight="@dimen/widget_horizontal_margin"
                            app:srcCompat="@drawable/placeholder"
                            android:textStyle="bold"/>

                    <Button
                            android:id="@+id/photo_adcard_2_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/main_photo_adcard_2_button"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/photo_adcard_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="4dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="@dimen/widget_horizontal_margin"
                            android:layout_marginRight="@dimen/widget_horizontal_margin"
                            app:srcCompat="@drawable/placeholder"
                            android:textStyle="bold"/>

                    <Button
                            android:id="@+id/photo_portrait_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/main_photo_portrait_button"
                            android:textStyle="bold"/>

                    <ImageView
                            android:id="@+id/photo_portrait"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="4dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="@dimen/widget_horizontal_margin"
                            android:layout_marginRight="@dimen/widget_horizontal_margin"
                            app:srcCompat="@drawable/placeholder"
                            android:textStyle="bold"/>

                    <Button
                            android:id="@+id/send_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/main_action_send"
                            android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/credential_result_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                    <TextView android:id="@+id/result_message_title"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textColor="@color/colorAccent"
                              android:textStyle="bold"
                              android:textSize="24sp"
                              android:paddingBottom="@dimen/widget_vertical_padding"
                              android:paddingLeft="@dimen/widget_horizontal_padding"
                              android:paddingRight="@dimen/widget_horizontal_padding"
                              android:paddingTop="@dimen/widget_vertical_padding"
                              android:layout_marginBottom="@dimen/widget_vertical_margin"
                              android:layout_marginLeft="@dimen/widget_horizontal_margin"
                              android:layout_marginRight="@dimen/widget_horizontal_margin"
                              android:layout_marginTop="@dimen/widget_vertical_margin"/>

                    <TextView android:id="@+id/result_message"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textColor="@color/colorError"
                              android:background="@color/colorBackgroundFloating"
                              android:paddingBottom="@dimen/widget_vertical_padding"
                              android:paddingLeft="@dimen/widget_horizontal_padding"
                              android:paddingRight="@dimen/widget_horizontal_padding"
                              android:paddingTop="@dimen/widget_vertical_padding"
                              android:layout_marginBottom="@dimen/widget_vertical_margin"
                              android:layout_marginLeft="@dimen/widget_horizontal_margin"
                              android:layout_marginRight="@dimen/widget_horizontal_margin"
                              android:layout_marginTop="@dimen/widget_vertical_margin"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>